--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorPrimary2">#f15622</color>
+    <color name="colorPrimaryDark2">#111111</color>
+    <color name="colorAccent2">#ffffff</color>
 </resources>
